Image 360 page - possible fix for tabbing to off screen hotspots issues

--- a/modules/xerte/parent_templates/Nottingham/models_html5/media360.css
+++ b/modules/xerte/parent_templates/Nottingham/models_html5/media360.css
@@ -178,7 +178,7 @@
 		min-height: 36px;
 	}
 	
-	.pnlm-panorama-info .pnlm-title-box {
+	.pnlm-panorama-info.indent .pnlm-title-box {
 		margin: auto;
 		position: absolute;
 		top: 0;
